force-app/main/default/objects/Restricted_Classification_Portfolio__c/Restricted_Classification_Portfolio__c.object-meta.xml
<CustomObject>
    <description>Represents the assignment of a single restricted classification to a portfolio</description>
    <label>Restricted Classification-Portfolio</label>
    <nameField>
        <displayFormat>RCP-{000000}</displayFormat>
        <label>Restricted Classification-Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restricted Classifications-Portfolios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>