force-app/main/default/objects/Restricted_Classification_Portfolio__c/fields/Classification_type__c.field-meta.xml
<CustomField>
    <fullName>Classification_type__c</fullName>
    <description>The type of the restricted classification linked from this record</description>
    <formula>TEXT(Restricted_Classification__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The type of the restricted classification linked from this record</inlineHelpText>
    <label>Classification type</label>
    <type>Text</type>
</CustomField>