force-app/main/default/objects/Restricted_Classification_Portfolio__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <description>The portfolio to which this &quot;join&quot; record assigns a restricted classification</description>
    <inlineHelpText>The portfolio to which this &quot;join&quot; record assigns a restricted classification</inlineHelpText>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Restricted Classifications</relationshipLabel>
    <relationshipName>Restricted_Classifications_Portfolios</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>