force-app/main/default/objects/Restricted_Classification_Portfolio__c/fields/Restricted_Classification__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Classification__c</fullName>
    <description>The restricted classification assigned by this &quot;join&quot; record</description>
    <inlineHelpText>The restricted classification assigned by this &quot;join&quot; record</inlineHelpText>
    <label>Restricted Classification</label>
    <referenceTo>Restricted_Classification__c</referenceTo>
    <relationshipLabel>Portfolios</relationshipLabel>
    <relationshipName>Restricted_Classifications_Portfolios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>